tests/neg-custom-args/captures/filevar-expanded.check
-- Error: tests/neg-custom-args/captures/filevar-expanded.scala:34:19 --------------------------------------------------
34 |    withFile(io3): f => // error: separation failure
   |                   ^
   |                   Separation failure: argument of type  (f: test2.File^{io3}) ->{io3} Unit
   |                   to method withFile: [T](io2: test2.IO^)(op: (f: test2.File^{io2}) => T): T
   |                   corresponds to capture-polymorphic formal parameter op of type  (f: test2.File^{io3}) => Unit
   |                   and captures {io3}, but this capability is also passed separately
   |                   in the first argument with type  (io3 : test2.IO^).
   |
   |                     Capture set of first argument         : {io3}
   |                     Hidden set of current argument        : {io3}
   |                     Footprint of first argument           : {io3}
   |                     Hidden footprint of current argument  : {io3}
   |                     Declared footprint of current argument: {}
   |                     Undeclared overlap of footprints      : {io3}
35 |      val o = Service(io3)
36 |      o.file = f  // this is a bit dubious. It's legal since we treat class refinements
37 |                  // as capture set variables that can be made to include refs coming from outside.
38 |      o.log
